add first question text

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         <div class="faq">
            <div class="question">
                 <div class="text">
-                    <p></p>
-                    <p></p>
+                    <p>How many team members can I invite?</p>
+                    <p>You can invite up to 2 additional users on the Free plan. There is no limit on 
+                        team members for the Premium plan</p>
                 </div>
                 <div class="arrow">
                     <img src="images/icon-arrow-down.svg" alt="">
