--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <img src="images/illustration-woman-online-mobile.svg" alt="">
             <img src="images/bg-pattern-mobile.svg" alt="">
         </div>
+        <h2>FAQ</h2>
         <div class="faq">
            <div class="question">
                 <div class="text">
