add bg-pattern div

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <body>
     <div class="container">
         <div class="bg-img">
-            <img src="images/illustration-woman-online-mobile.svg" alt="">
-            <img src="images/bg-pattern-mobile.svg" alt="">
         </div>
+        <div class="bg-pattern"></div>
         <h2>FAQ</h2>
         <div class="faq">
            <div class="question">
