--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <div class="bg-img">
         </div>
         <div class="bg-pattern"></div>
-        <h2>FAQ</h2>
+        <h1>FAQ</h1>
         <div class="faq">
            <div class="question">
                 <div class="text">
-                    <p>How many team members can I invite?</p>
+                    <h3>How many team members can I invite?</h3>
                     <p>You can invite up to 2 additional users on the Free plan. There is no limit on 
                         team members for the Premium plan</p>
                 </div>
