--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
 </head>
 <body>
     <div class="container">
-        <div class="bg-img">
+        <div class="images">
+            <div class="bg-img">
+            </div>
+            <div class="bg-pattern"></div>
+            <div class="box-img">
+                <img src="images/illustration-box-desktop.svg" alt="">
+            </div>
         </div>
-        <div class="bg-pattern"></div>
-        <h1>FAQ</h1>
         <div class="faq">
+            <h1>FAQ</h1>
            <div class="question">
                 <div class="text">
-                    <h4>How many team members can I invite?</h4>
+                    <h4 >How many team members can I invite?</h4>
                     <p>You can invite up to 2 additional users on the Free plan. There is no limit on 
                         team members for the Premium plan.</p>
                 </div>
@@ -26,8 +31,8 @@
            </div>
            <div class="question">
                 <div class="text">
-                    <h4>What is the maximum file upload size?</h4>
-                    <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
+                    <h4 >What is the maximum file upload size?</h4>
+                    <p >No more than 2GB. All files in your account must fit your allotted storage space.</p>
                 </div>
                 <div class="arrow">
                     <img src="images/icon-arrow-down.svg" alt="">
