--- a/index.html
+++ b/index.html
@@ -21,52 +21,53 @@
             <h1>FAQ</h1>
            <div class="question">
                 <div class="text">
-                    <h4 >How many team members can I invite?</h4>
-                    <p>You can invite up to 2 additional users on the Free plan. There is no limit on 
+                    <h4  class="heading">How many team members can I invite?</h4>
+                    <p class="para">You can invite up to 2 additional users on the Free plan. There is no limit on 
                         team members for the Premium plan.</p>
                 </div>
                 <div class="arrow">
-                    <img src="images/icon-arrow-down.svg" alt="">
+                    <img class="img-arr" src="images/icon-arrow-down.svg" alt="">
                 </div>
            </div>
            <div class="question">
                 <div class="text">
-                    <h4 >What is the maximum file upload size?</h4>
-                    <p >No more than 2GB. All files in your account must fit your allotted storage space.</p>
+                    <h4 class="heading">What is the maximum file upload size?</h4>
+                    <p class="para">No more than 2GB. All files in your account must fit your allotted storage space.</p>
                 </div>
                 <div class="arrow">
-                    <img src="images/icon-arrow-down.svg" alt="">
+                    <img class="img-arr"  src="images/icon-arrow-down.svg" alt="">
                 </div>
            </div>
            <div class="question">
                 <div class="text">
-                    <h4>How do I reset my password?</h4>
-                    <p>Click “Forgot password” from the login page or “Change password” from your profile page.
+                    <h4 class="heading">How do I reset my password?</h4>
+                    <p class="para">Click “Forgot password” from the login page or “Change password” from your profile page.
                         A reset link will be emailed to you.</p>
                 </div>
                 <div class="arrow">
-                    <img src="images/icon-arrow-down.svg" alt="">
+                    <img class="img-arr" src="images/icon-arrow-down.svg" alt="">
                 </div>
            </div>
            <div class="question">
                 <div class="text">
-                    <h4>Can I cancel my subscription?</h4>
-                    <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
+                    <h4 class="heading">Can I cancel my subscription?</h4>
+                    <p class="para">Yes! Send us a message and we’ll process your request no questions asked.</p>
                 </div>
                 <div class="arrow">
-                    <img src="images/icon-arrow-down.svg" alt="">
+                    <img class="img-arr" src="images/icon-arrow-down.svg" alt="">
                 </div>
            </div>
            <div class="question">
                 <div class="text">
-                    <h4>Do you provide additional support?</h4>
-                    <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+                    <h4 class="heading">Do you provide additional support?</h4>
+                    <p class="para">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
                 </div>
                 <div class="arrow">
-                    <img src="images/icon-arrow-down.svg" alt="">
+                    <img class="img-arr" src="images/icon-arrow-down.svg" alt="">
                 </div>
            </div>
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
